attempt to fix white space issue, min width added

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 section {
   height: 100vh;
-  width: 100%;
+  min-width: 100%;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
